# DRDMannTurb

./: .cursorignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  MANIFEST.in  Makefile  README.md  model.eqx  model_params.eqx  model_params.npz  paper.bib  paper.md  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt  ruff.toml  setup.py  spec-file.txt
.github/: dependabot.yml  new_windgen.py  new_windgen.py_OLD
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: coverage.yml  docs.yml  docs.yml--DISABLED  draft-pdf.yml  lint.yml  main.yml  main.yml--DISABLED  precision-tests.yml  run_sanity.yml  run_sanity.yml--DISABLED  run_tests.yml  slow-tests.yml  test.yml
DRD_JAX/: README.md  jax_data_generator.py  tester.py  visualization.py
DRD_JAX/test_cases/: CASE_DRD_VON_KARMAN_DATA_ZREF_50_USTAR_10.npz
JAX_REWRITE/: .gitignore  JAX_calibration.py  dev.ipynb  tester.py
JAX_REWRITE/fluctuation_generation/: gen_low_freq.py
NBs/: Experiment2.ipynb
STORM_fitting/: data_clean.ipynb  data_clean_for_coh.ipynb  data_clean_with_coh.ipynb  debug.py  dry_run.py  fit.ipynb  fit_coh.ipynb  fit_for_profiling.py  script_fit_coh.py
STORM_fitting/notebooks/: MANN_FIELD_FOR_MFEM.ipynb  data_clean_for_coh.ipynb
WindGenerator/: .gitignore
WindGenerator/script/: Calibration.ipynb  SimpleFluctuationGenerator.py  script_Calibration.py  script_OnTheFlyGenerator_example.py
WindGenerator/source/: LearnableFunctions.py  OnePointSpectra.py  Plot.py  PowerSpectraRDT.py  tauNet.py
arch_eval/: consts.py  consts_exp1.py  consts_exp2.py  consts_resnet.py  exp1_2pen_run_mlp.py  exp1_single_run_mlp.py  exp2_2pen_run_mlp.py  exp2_single_run_mlp.py  gridsearch_mlp.py  gs_taunet.py  modelviz.py  optim_exp.py  resnet_basic.py  resnet_basic_exp2.py  single_run_mlp.py
arch_eval/constants/: consts.py  consts_exp1.py  consts_exp2.py  consts_exp2_resnet.py  (+1 more)
conda_env_files/: conda-lock.yml  environment.yml
conda_spec_files/: macOS_arm64.txt
docs/: Makefile  calibration.html  cov_kernels.html  data_types_and_classes.html  dataclasses.html  datatypes.html  examples.html  fitting.html  forward_api.html  genindex.html  getting-started.html  grf.html  index.html  internal_api.html  internal_cov.html  internal_cov_sampling.html  internal_nets.html  internal_rdt_ps.html  interpolation.html  losses.html  objects.inv  py-modindex.html  sampling.html  search.html  searchindex.js  sg_execution_times.html  tb_loss.html  uml_drd.html  uml_fluct_gen.html  windgeneration.html
drdmannturb/: Calibration.py  DataGenerator.py  LearnableFunctions.py  OnePointSpectra.py  Plot.py  SpectralCoherence.py  TODO.md  __init__.py  calibration.py  common.py  data_generator.py  enums.py  generate_wind.py  interpolation.py  learnable_functions.py  loggers.py  nn_modules.py  one_point_spectra.py  parameters.py  power_spectra_rdt.py  spectral_coherence.py  tauNet.py  tau_net.py  utils.py
examples/: 01_basic_mann_parameters_fit.py  01_basic_mann_params_fit.py  01_mann_elt_fit.py  02_eddy-lifetime_fit.py  02_taunet_elt_fit.py  02_taunet_kaimal_fit.py  03_custom_noisy_data_fit.py  03_eddy-lifetime_fit_3term_loss.py  04_eddy-lifetime_fit_gelu.py  04_mann_box_generation_IEC.py  05_custom_noisy_data_fit.py  05_custorm_noisy_data_fit.py  06_custom_data_interpolate_and_fit.py  06_drd_box.py  07_mann_linear_regression.py  08_mann_box_generation_IEC.py  09_drd_box.py  10_mann_2d_plus_3d.py  2d_plus_3d.ipynb  Custom Data Fit.ipynb  README.rst  data_interp.ipynb  filtered_noisy_spectra.ipynb  interpplt.ipynb  plot_custom_data_fit.py  plot_image.py  plot_interpolating_and_fitting.py  plot_mann_approx_fit.ipynb  plot_mann_fit.py  plot_mann_linear_regression.py  plot_synthetic_3term_loss.py  plot_synthetic_deep_arch.py  plot_synthetic_fit.py  plot_wind_generation.py  script_Interpolation_experiment.py  test_fg.py  test_tensorboard.ipynb  vanilla_noisy_spectra.ipynb  vanilla_synthetic.ipynb
examples-unrendered/: 2d_plus_3d_prototype.py  analytic_f11_f22.py  hypergeom_sub.ipynb  low_freq.ipynb  low_freq_prototype.py  low_frequency_prototype.py  num_els.ipynb  ops_tests.ipynb  recreate_figure1_atten_and_noatten.py  recreate_figure2a.ipynb  recreate_figure2a.py  recreate_figure2b.py  wind_gen_gif.ipynb
experiments/: exp1_2pen_run_mlp.py  exp1_interpolated_data.py  exp1_interpolated_data_filtered.py  exp1_interpolated_data_nF_P.py  exp1_interpolated_data_nF_nP.py  exp1_single_run_mlp.py  exp2_2pen_run_mlp.py  exp2_resnet_basic.py  exp2_single_run_mlp.py  gpu_exp1_interpolated_data_filtered.py
fracturbulence/: Calibration.py  DataGenerator.py  LearnableFunctions.py  OnePointSpectra.py  Plot.py  PowerSpectraRDT.py  SpectralCoherence.py  common.py  tauNet.py
low_freq_dev/: Fij_numerical_integrator.py  drd_tester.py  mannSyed.ipynb  mannSyed.py  most_recent.py  pretty_print.py  progress.py  prompts.md  random.ipynb  redo_num_int.py  redo_num_integration.ipynb  simulator.py  tracking.md  transform_norm.md  usingDRD.ipynb  usingDRD.py  von_karman.py
paper/: paper.bib  paper.md
profiling/: onnx_eval.py  onnxport.py  sample.py  script_Calibration_exp1.py
requirements/: env_drdmann.yml  env_drdmannturb.yml
script/: Calibration.ipynb  SimpleFluctuationGenerator.py  new_script_TestCoherence.py  output.pstats  resultstauNet_Custom.pkl  script_Calibration.py  script_Calibration_DEFAULT.py  script_Calibration_exp1.py  script_OnTheFlyGenerator_example.py  script_TestCoherence.py  script_TestCoherence_orig.py
source/: Calibration.py  OnePointSpectra.py  PowerSpectraRDT.py  SpectralCoherence.py  common.py  tauNet.py
test/: GIF_wind_gen.py  conftest.py  test_WindGeneration.py  test_vk_datagen.ipynb
tests/: test_data.py  test_spectral.py  test_taunet.py
(+435 files in other folders)
